# imask

./: COORDINATES.md  Cargo.toml  flake.nix  span_inconsistencies.md
benches/: span_iter.rs
src/: async_io.rs  checked_add_signed.rs  create_range.rs  io.rs  lib.rs  map.rs  non_zero.rs  rect.rs  set.rs  span.rs
src/io/: async_io.rs  header.rs  roi.rs  sync_io.rs
src/set/: dilate.rs  future.rs  iter.rs  iter_global.rs  map_inplace.rs  rect.rs  sanitize_sorted_disjoint.rs  span_offsets_iter.rs
src/span/: affine_transform.rs  clip.rs  dilate.rs  from_bitmap.rs  from_bitmap_range.rs  intersect.rs  into_ranges.rs  peekable.rs  rect.rs  subtract.rs  union.rs  union_all.rs
