[package]
name = "imask"
version = "0.0.1"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
description = "Represent boolean image masks as collection/iterator of ranges"
repository = "https://github.com/mineichen/imask"
keywords = ["boolean", "image", "ranges"]
categories = ["data-structures", "computer-vision", "algorithms"]
readme = "README.md"
license = "MIT"
edition = "2024"


[dependencies]
itertools = "0.14.0"
nalgebra = "0.34"
range-set-blaze-0_5 = { package = "range-set-blaze", version = "0.5", default-features = false, optional = true }
thiserror = "2.0.12"
rkyv = { version = "0.8.15", optional = true }
num-traits = "0.2"
futures-core = { version = "0.3", optional = true }
futures-io = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "io-util"] }
futures-util = "0.3"
testresult = "0.4"
image = "0.25"
criterion = "0.5"

[[bench]]
name = "span_iter"
harness = false

[features]
default = ["range-set-blaze-0_5", "rkyv", "async-io"]
async-io = ["futures-io", "futures-core", "pin-project-lite"]
